# popchoice

./: README.md
.github/workflows/: ci.yml
backend/: .env.example  Makefile  main.py  pyproject.toml
backend/app/: agent.py  config.py  database.py  embeddings.py  tmdb.py
backend/tests/: test_agent.py  test_database.py  test_embeddings.py  test_tmdb.py
frontend/: package.json  pnpm-lock.yaml  vitest.config.mts
frontend/src/__tests__/: add-page.test.tsx  page.test.tsx  recommend-page.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/add/: page.tsx
frontend/src/app/api/media/: route.ts
frontend/src/app/api/recommend/reply/: route.ts
frontend/src/app/api/recommend/start/: route.ts
frontend/src/app/api/search/: route.ts
frontend/src/app/recommend/: page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  textarea.tsx
frontend/src/lib/: api.ts
frontend/src/test/: setup.ts
