[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.83.0",
    "fastapi[standard]>=0.132.0",
    "langchain-anthropic>=1.3.3",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.9",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
    "supabase>=2.28.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
